# alternative-data-for-crisis

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml  requirements-drought.txt
.github/workflows/: gh-pages.yml  release.yml
.venv-drought/: pyvenv.cfg
docs/: _config.yml  _toc.yml  bibliography.bib
notebooks/: business-activity-trends.ipynb  damage-assessment.md  google-trends.ipynb  mapping-exposure-infrastructure.ipynb  mapping-exposure-population.ipynb  mapping_monitoring_conflict.ipynb  mapping_monitoring_floods.ipynb  world-bank-api.ipynb
notebooks/disruptions-business-trade/: business-activity-trends.ipynb  chokepoints-monitor.ipynb  cross-border-activity.md  google-trends.ipynb  introduction.md  maritime-port-activity.ipynb  port-calls-practice.ipynb  port-calls-trends-monitor.ipynb
notebooks/establishing-the-analysis-zone/: establishing-the-analysis-zone.ipynb
notebooks/final-project/: final-project.md
notebooks/mapping-and-monitoring-extent/: mapping-and-monitoring-extent-intro.md  mapping-and-monitoring-floods.ipynb  mapping-and-monitoring-surface-change.md  mapping_monitoring_floods.ipynb
notebooks/mapping-exposure/: mapping-exposure-infrastructure-main.ipynb  mapping-exposure-infrastructure-mbf.ipynb  mapping-exposure-infrastructure-overture.ipynb  mapping-exposure-infrastructure.ipynb  mapping-exposure-intro.md  mapping-exposure-population.ipynb
notebooks/physical-impact/: NTL.ipynb  damage-assessment.ipynb  internet-connectivity.ipynb
notebooks/pulling-it-together/: best-practices.md  indicators-housing-and-community.ipynb  industry-and-commerce.ipynb  practice-indicators.ipynb  (+1 more)
(+15 files in other folders)
